--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sanity": "^4.22.0",
+    "sonner": "^2.0.7",
     "styled-components": "^6.3.9",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
