--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "typegen": "sanity schema extract && sanity typegen generate --enforce-required-fields"
+    "typegen": "sanity schema extract && sanity typegen generate --enforce-required-fields",
+    "generate-favicons": "sharp public/RRFavicon.png -o public/favicon.ico resize 32,32 && sharp public/logo.svg -o public/icon-16x16.png resize 16,16 && sharp public/logo.svg -o public/icon-32x32.png resize 32,32 && sharp public/logo.svg -o public/icon-192x192.png resize 192,192 && sharp public/logo.svg -o public/icon-384x384.png resize 384,384 && sharp public/logo.svg -o public/icon-512x512.png resize 512,512 && sharp public/logo.svg -o public/apple-icon.png resize 180,180"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.29",
@@ -17,6 +18,7 @@
     "@sanity/client": "^7.14.1",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
+    "@sanity/sdk-react": "^2.7.0",
     "@sanity/vision": "^4.22.0",
     "ai": "^6.0.86",
     "class-variance-authority": "^0.7.1",
@@ -48,6 +50,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "shadcn": "^3.8.4",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
