--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "typegen": "sanity schema extract && sanity typegen generate --enforce-required-fields",
+    "cleanup:sanity": "tsx scripts/cleanup-sanity.ts",
     "generate-favicons": "sharp public/RRFavicon.png -o public/favicon.ico resize 32,32 && sharp public/logo.svg -o public/icon-16x16.png resize 16,16 && sharp public/logo.svg -o public/icon-32x32.png resize 32,32 && sharp public/logo.svg -o public/icon-192x192.png resize 192,192 && sharp public/logo.svg -o public/icon-384x384.png resize 384,384 && sharp public/logo.svg -o public/icon-512x512.png resize 512,512 && sharp public/logo.svg -o public/apple-icon.png resize 180,180"
   },
   "dependencies": {
@@ -52,6 +53,7 @@
     "shadcn": "^3.8.4",
     "sharp": "^0.34.5",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
